resources/styles/app.css
/* ... */
/* Mobile Menu */

#mobile-menu {
  display: none;
  position: relative;
  height: 100vh;
  width: 100vw;
  background-color: white;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#mobile-menu #mobile-menu-close-btn {
  position: absolute;
  width: 100vw;
  padding-left: 7rem;
  top: 1.5rem;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
}

#mobile-menu #mobile-menu-close-btn img {
  margin-bottom: 0.5rem;
}

#mobile-menu .content {
  margin-top: -19rem;
  font-weight: 300;
}

#mobile-menu .content .pages .menu {
  display: flex;
  flex-direction: column;
  text-align: center;
  padding: 0;
  margin: 0;
  gap: 1rem;
}

#mobile-menu .content .pages .menu .menu-item {
  margin: 1rem 0;
}

#mobile-menu .content .divider {
  width: 14rem;
  border-top: 0.8px solid var(--brown-grey);
  margin: 2rem 0;
}

#mobile-menu .content .links {
  display: flex;
  flex-direction: column;
  text-align: center;
  gap: 1rem;
}

#mobile-menu .content .links a {
  text-decoration: none;
  color: var(--brown-grey);
  margin: 1rem 0;
}

/* Search Results Header */

.header .header-right .search .search-results {
  background-color: white;
  position: absolute;
  top: 2.6rem;
  width: 100%;
  text-align: left;
  font-size: initial;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  z-index: 1;
}

.header .header-right .search .search-results div {
  padding: 0 2rem;
}

.header .header-right .search .search-results div:first-child {
  padding-top: 1rem;
}

.header .header-right .search .search-results div:last-child {
  padding-bottom: 1rem;
}

.header .header-right .search .search-results .result-type {
  color: var(--brown-grey);
}

/* Search Results Hero */

.hero .hero-text .search .search-results {
  background-color: white;
  position: absolute;
  top: 2.6rem;
  width: 100%;
  text-align: left;
  font-size: initial;
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}

.hero .hero-text .search .search-results div {
  padding: 0 5rem;
}

.hero .hero-text .search .search-results div:first-child {
  padding-top: 1rem;
}

.hero .hero-text .search .search-results div:last-child {
  padding-bottom: 1rem;
}

.hero .hero-text .search .search-results .result-type {
  color: var(--brown-grey);
}

/* Mobile Nav section */

.mobile-nav-section {
  background-color: #fafafa;
  height: 6rem;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem 0;
}

@media (min-width: 768px) {
  .mobile-nav-section {
    display: none;
  }
}

.mobile-nav-section .pages .menu {
  padding: 0;
  display: flex;
  gap: 1.5rem;
}

.mobile-nav-section .pages .menu .menu-item {
  padding: 0.75rem;
  background-color: rgba(232, 196, 122, 0.8);
  font-weight: 300;
}

